--- a/styles.css
+++ b/styles.css
@@ -1,367 +1,335 @@
+:root {
+    --checker-color-1: rgb(184, 184, 184);
+    --checker-color-2: rgb(23, 23, 23);
+    --checker-size: 4px;
+    --checker-gradient: linear-gradient(45deg, var(--checker-color-1) 25%, transparent 25%, transparent 75%, var(--checker-color-1) 75%);
+}
+
 /*highlighter style*/
 /*lowlight*/
 .highlightr-lowlight mark,
 .highlightr-lowlight span.cm-highlight,
 .highlightr-lowlight .markdown-preview-view mark {
-  --lowlight-background: var(--background-primary);
-  border-radius: 0;
-  background-image: linear-gradient(
-    360deg,
-    rgba(255, 255, 255, 0) 40%,
-    var(--lowlight-background) 40%
-  ) !important;
+	--lowlight-background: var(--background-primary);
+	border-radius: 0;
+	background-image: linear-gradient(360deg,
+			rgba(255, 255, 255, 0) 40%,
+			var(--lowlight-background) 40%) !important;
 }
 
 .highlightr-lowlight .workspace-split.mod-left-split mark,
 .highlightr-lowlight .workspace-split.mod-left-split span.cm-highlight,
-.highlightr-lowlight
-  .workspace-split.mod-left-split
-  .markdown-preview-view
-  mark,
+.highlightr-lowlight .workspace-split.mod-left-split .markdown-preview-view mark,
 .highlightr-lowlight .workspace-split.mod-right-split mark,
 .highlightr-lowlight .workspace-split.mod-right-split span.cm-highlight,
-.highlightr-lowlight
-  .workspace-split.mod-right-split
-  .markdown-preview-view
-  mark {
-  --lowlight-background: var(--background-secondary);
+.highlightr-lowlight .workspace-split.mod-right-split .markdown-preview-view mark {
+	--lowlight-background: var(--background-secondary);
 }
 
 .highlightr-lowlight .admonition-content mark,
 .highlightr-lowlight .admonition-content span.cm-highlight,
 .highlightr-lowlight .admonition-content > .markdown-preview-view mark {
-  --lowlight-background: var(--background-primary-alt);
+	--lowlight-background: var(--background-primary-alt);
 }
 
 /*floating*/
 .highlightr-floating mark,
 .highlightr-floating span.cm-highlight,
 .highlightr-floating .markdown-preview-view mark {
-  --floating-background: var(--background-primary);
-  border-radius: 0;
-  padding-bottom: 5px;
-  background-image: linear-gradient(
-    360deg,
-    rgba(255, 255, 255, 0) 28%,
-    var(--floating-background) 28%
-  ) !important;
+	--floating-background: var(--background-primary);
+	border-radius: 0;
+	padding-bottom: 5px;
+	background-image: linear-gradient(360deg,
+			rgba(255, 255, 255, 0) 28%,
+			var(--floating-background) 28%) !important;
 }
 
 .highlightr-floating .workspace-split.mod-left-split mark,
 .highlightr-floating .workspace-split.mod-left-split span.cm-highlight,
-.highlightr-floating
-  .workspace-split.mod-left-split
-  .markdown-preview-view
-  mark,
+.highlightr-floating .workspace-split.mod-left-split .markdown-preview-view mark,
 .highlightr-floating .workspace-split.mod-right-split mark,
 .highlightr-floating .workspace-split.mod-right-split span.cm-highlight,
-.highlightr-floating
-  .workspace-split.mod-right-split
-  .markdown-preview-view
-  mark {
-  --floating-background: var(--background-secondary);
+.highlightr-floating .workspace-split.mod-right-split .markdown-preview-view mark {
+	--floating-background: var(--background-secondary);
 }
 
 .highlightr-floating .admonition-content mark,
 .highlightr-floating .admonition-content span.cm-highlight,
 .highlightr-floating .admonition-content > .markdown-preview-view mark {
-  --floating-background: var(--background-primary-alt);
+	--floating-background: var(--background-primary-alt);
 }
 
 /*rounded*/
 .highlightr-rounded mark,
 .highlightr-rounded .markdown-preview-view mark {
-  margin: 0 -0.05em;
-  padding: 0.125em 0.15em;
-  border-radius: 0.2em;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
+	margin: 0 -0.05em;
+	padding: 0.125em 0.15em;
+	border-radius: 0.2em;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
 }
 
 .highlightr-rounded span.cm-highlight {
-  border-radius: 0.2em;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
+	border-radius: 0.2em;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
 }
 
 .highlightr-rounded .cm-s-obsidian span.cm-highlight {
-  font-weight: inherit;
+	font-weight: inherit;
 }
 
 .highlightr-rounded .cm-highlight + span.cm-formatting-highlight {
-  padding-left: 0em;
-  padding-right: 0.15em;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
+	padding-left: 0em;
+	padding-right: 0.15em;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
 }
 
 /*realistic*/
 .highlightr-realistic mark,
 .highlightr-realistic .markdown-preview-view mark {
-  margin: 0 -0.05em;
-  padding: 0.1em 0.4em;
-  border-radius: 0.8em 0.3em;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-  text-shadow: 0 0 0.75em var(--background-primary-alt);
+	margin: 0 -0.05em;
+	padding: 0.1em 0.4em;
+	border-radius: 0.8em 0.3em;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
+	text-shadow: 0 0 0.75em var(--background-primary-alt);
 }
 
 .highlightr-realistic.hide-tokens .cm-s-obsidian span.cm-highlight,
 .hide-tokens.highlightr-realistic .cm-s-obsidian span.cm-highlight {
-  border-radius: 0.8em 0.3em;
+	border-radius: 0.8em 0.3em;
 }
 
 .highlightr-realistic .cm-s-obsidian span.cm-highlight {
-  padding: 0.15em 0.25em;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-  text-shadow: 0 0 0.75em var(--background-primary-alt);
+	padding: 0.15em 0.25em;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
+	text-shadow: 0 0 0.75em var(--background-primary-alt);
 }
 
 .highlightr-realistic .cm-s-obsidian span.cm-formatting-highlight {
-  margin: 0 0 0 -0.05em;
-  padding: 0.15em 0.25em;
-  border-radius: 0.8em 0 0 0.3em;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
+	margin: 0 0 0 -0.05em;
+	padding: 0.15em 0.25em;
+	border-radius: 0.8em 0 0 0.3em;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
 }
 
-.highlightr-realistic
-  .cm-s-obsidian
-  .cm-highlight
-  + span.cm-formatting-highlight {
-  margin: 0 -0.05em 0 0;
-  padding: 0.15em 0.25em;
-  border-radius: 0 0.3em 0.8em 0;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
+.highlightr-realistic .cm-s-obsidian .cm-highlight + span.cm-formatting-highlight {
+	margin: 0 -0.05em 0 0;
+	padding: 0.15em 0.25em;
+	border-radius: 0 0.3em 0.8em 0;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
 }
 
-/**/
+/* whatever this even is? */
 
 button.copy-highlights {
-  padding: 4px 14px;
-  border-radius: 5px;
-  background-color: var(--interactive-accent);
+	padding: 4px 14px;
+	border-radius: 5px;
+	background-color: var(--interactive-accent);
 }
 
 .copy-highlights svg {
-  width: 1.3em;
-  height: 1.3em;
-  display: flex;
+	width: 1.3em;
+	height: 1.3em;
+	display: flex;
 }
 
 details summary.highlight-summary:before {
-  width: 2em;
-  height: 2em;
-  content: "☐";
-  font-size: 9px;
-  cursor: pointer;
-  margin-right: 5px;
-  display: inline-block;
-  vertical-align: 0.05em;
-  background-color: currentColor;
-  -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path fill="black" d="M10.707 17.707L16.414 12l-5.707-5.707l-1.414 1.414L13.586 12l-4.293 4.293z"></path></svg>');
+	width: 2em;
+	height: 2em;
+	content: "☐";
+	font-size: 9px;
+	cursor: pointer;
+	margin-right: 5px;
+	display: inline-block;
+	vertical-align: 0.05em;
+	background-color: currentColor;
+	-webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path fill="black" d="M10.707 17.707L16.414 12l-5.707-5.707l-1.414 1.414L13.586 12l-4.293 4.293z"></path></svg>');
 }
 
 details[open] summary.highlight-summary::before {
-  transform: rotate(90deg);
+	transform: rotate(90deg);
 }
 
 /*highlightr component*/
 
 @keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 0.9;
-  }
-  40% {
-    opacity: 0.95;
-  }
-  100% {
-    opacity: 1;
-  }
+	0% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 0.9;
+	}
+	40% {
+		opacity: 0.95;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
-.menu.highlighterContainer {
-  min-width: 140px;
-  max-width: 225px;
-  max-height: 180px;
-  padding-left: 0em;
-  padding: 0;
-  margin: 0 auto;
-  border-radius: 6px;
-  font-size: 14px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  position: fixed;
-  animation: fade 300ms ease-in-out;
-  background-color: var(--background-primary);
-  box-shadow: 0px 3px 25px rgba(31, 38, 135, 0.1);
-  border: 1px solid var(--background-modifier-border);
+.menu.painter-plugin-menu-container {
+	min-width: 140px;
+	max-width: 225px;
+	max-height: 180px;
+	padding-left: 0em;
+	padding: 0;
+	margin: 0 auto;
+	border-radius: 6px;
+	font-size: 14px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	position: fixed;
+	animation: fade 300ms ease-in-out;
+	background-color: var(--background-primary);
+	box-shadow: 0px 3px 25px rgba(31, 38, 135, 0.1);
+	border: 1px solid var(--background-modifier-border);
 }
 
-.menu.highlighterContainer .menu-item .menu-item-icon {
-  display: inline-block;
-  width: 25px;
-  position: relative;
-  top: 2px;
+.menu.painter-plugin-menu-container .menu-item .menu-item-icon {
+	display: inline-block;
+	width: 25px;
+	position: relative;
+	top: 2px;
 }
 
-.menu.highlighterContainer .menu-item {
-  display: flex;
-  padding: 2px 14px 3px 14px;
-  align-items: unset;
-  margin: auto;
-  cursor: pointer;
-  font-size: 14px;
-  height: 32px;
-  line-height: 31px;
-  white-space: nowrap;
-  border-radius: 0;
-  border-bottom: 1px solid var(--background-modifier-border);
+.menu.painter-plugin-menu-container .menu-item {
+	display: flex;
+	padding: 2px 14px 3px 14px;
+	align-items: unset;
+	margin: auto;
+	cursor: pointer;
+	font-size: 14px;
+	height: 32px;
+	line-height: 31px;
+	white-space: nowrap;
+	border-radius: 0;
+	border-bottom: 1px solid var(--background-modifier-border);
 }
 
-.menu.highlighterContainer .menu-item:last-of-type {
-  border-bottom: none;
+.menu.painter-plugin-menu-container .menu-item:last-of-type {
+	border-bottom: none;
 }
 
 /*----------------------------------------------------------------
 SETTINGS TAB
 ----------------------------------------------------------------*/
 
-button.HighlightrSettingsButton {
-  padding: 4px 14px;
-  border-radius: 6px;
-  height: fit-content;
-  cursor: pointer;
+button.painter-plugin-settings-button {
+	padding: 4px 14px;
+	border-radius: 6px;
+	height: fit-content;
+	cursor: pointer;
 }
-button.HighlightrSettingsButton:disabled {
+button.painter-plugin-settings-button:disabled {
 	cursor: not-allowed;
 }
-button.HighlightrSettingsButton:disabled:hover {
+button.painter-plugin-settings-button:disabled:hover {
 	background-color: var(--interactive-normal);
 }
 
-button.HighlightrSettingsButton svg {
-  width: 1.3em;
-  height: 1.3em;
-  display: flex;
+button.painter-plugin-settings-button svg {
+	width: 1.3em;
+	height: 1.3em;
+	display: flex;
 }
 
-.highlighter-settings-color,
-.highlighter-settings-value {
-  width: 42%;
-  color: var(--text-normal);
+.painter-plugin-settings-color,
+.painter-plugin-settings-value {
+	width: 42%;
+	color: var(--text-normal);
 }
 
-.highlighterplugin-setting-item {
-  display: block;
+.painter-plugin-setting-item {
+	display: block;
 }
 
-.highlighterplugin-setting-item .setting-item-control {
-  justify-content: space-between;
-  margin-top: 12px;
-  align-content: center;
-  align-items: flex-end;
-  grid-gap: 6px;
+.painter-plugin-setting-item .setting-item-control {
+	display: flex;
+	margin-top: 12px;
+	align-items: center;
+	justify-content: start;
+	grid-gap: 6px;
 }
 
-.modal.mod-settings
-  button:not(.mod-cta):not(.mod-warning).HighlightrSettingsButton.HighlightrSettingsButtonAdd,
-button:not(.mod-cta):not(.mod-warning).HighlightrSettingsButton.HighlightrSettingsButtonAdd {
-  background-color: var(--interactive-accent);
+.painter-plugin-color-preview {
+	background-color: var(--checker-color-2);
+    background-image: var(--checker-gradient), var(--checker-gradient);
+    background-position: 0 0, var(--checker-size) var(--checker-size);
+    background-size: calc(var(--checker-size) * 2) calc(var(--checker-size) * 2);
+
+	width: 32px; height: 32px;
+	padding: 0; margin: 0;
+	border-radius: 0;
 }
 
-.modal.mod-settings
-  button:not(.mod-cta):not(.mod-warning).HighlightrSettingsButton.HighlightrSettingsButtonDelete,
-button:not(.mod-cta):not(.mod-warning).HighlightrSettingsButton.HighlightrSettingsButtonDelete {
-  background-color: #5e5f61;
+/* i bet these can be simplified... */
+.modal.mod-settings button:not(.mod-cta):not(.mod-warning).painter-plugin-settings-button.painter-plugin-settings-button-add,
+button:not(.mod-cta):not(.mod-warning).painter-plugin-settings-button.painter-plugin-settings-button-add {
+	background-color: var(--interactive-accent);
+}
+
+.modal.mod-settings button:not(.mod-cta):not(.mod-warning).painter-plugin-settings-button.painter-plugin-settings-button-delete,
+button:not(.mod-cta):not(.mod-warning).painter-plugin-settings-button.painter-plugin-settings-button-delete {
+	background-color: #5e5f61;
 }
 
 /**/
-.highlighter-setting-icon {
-  display: flex;
-  height: 24px;
-  width: 24px;
+.painter-plugin-setting-icon {
+	display: flex;
+	height: 24px;
+	width: 24px;
 }
 
-.highlighter-item-color {
-  display: grid;
-  grid-gap: 8px;
-  grid-template-columns: 0.5fr 7fr;
-  align-items: center;
-  border-top: 1px solid var(--background-modifier-border);
+.painter-plugin-item-color {
+	display: grid;
+	grid-gap: 8px;
+	grid-template-columns: 0.5fr 7fr;
+	align-items: center;
+	border-top: 1px solid var(--background-modifier-border);
 }
 
 .HighlightrSettingsTabsContainer {
-  border-bottom: 1px solid var(--background-modifier-border);
+	border-bottom: 1px solid var(--background-modifier-border);
 }
 
 .setting-item.highlighter-setting-item:first-child {
-  padding-top: 18px;
+	padding-top: 18px;
 }
 
 .highlighter-setting-item {
-  padding: 18px 0 18px 0;
-  border-top: none;
+	padding: 18px 0 18px 0;
+	border-top: none;
 }
 
 .highlighter-sortable-fallback {
-  cursor: grabbing;
-  box-shadow: 0px 3px 32px rgb(31 38 135 / 15%);
+	cursor: grabbing;
+	box-shadow: 0px 3px 32px rgb(31 38 135 / 15%);
 }
 
 .highlighter-sortable-grab {
-  cursor: grabbing !important;
+	cursor: grabbing !important;
 }
 
 .highlighter-sortable-ghost {
-  opacity: 0.4;
-  cursor: grabbing;
+	opacity: 0.4;
+	cursor: grabbing;
 }
 
 .highlighter-sortable-chosen {
-  cursor: grabbing;
-  padding: 0 0 0 18px;
-  background-color: var(--background-primary);
+	cursor: grabbing;
+	padding: 0 0 0 18px;
+	background-color: var(--background-primary);
 }
 
 .highlighter-sortable-drag {
-  cursor: grabbing;
-  box-shadow: 0px 3px 32px rgb(31 38 135 / 15%);
-}
-
-/*----------------------------------------------------------------
-HIGHLIGHTR SUPPORT
-----------------------------------------------------------------*/
-
-.themed-color-wrapper > div {
-  background: var(--background-primary);
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  border-radius: 4px;
-}
-
-.themed-color-wrapper > div + div {
-  margin-top: 6px;
-}
-
-.themed-color-wrapper button {
-  display: block;
-}
-
-.themed-color-wrapper .pickr-reset > button {
-  margin: 0 0 0 10px;
-  padding: 9px;
-  line-height: 1;
-}
-
-.themed-color-wrapper .pickr-reset > button > svg {
-  display: block;
+	cursor: grabbing;
+	box-shadow: 0px 3px 32px rgb(31 38 135 / 15%);
 }
 
 /* data.json for highlightr plugin */
@@ -370,20 +338,22 @@ HIGHLIGHTR SUPPORT
 
 /* restyle the vanilla highlight to rosebox color */
 .markdown-preview-view,
-.cm-s-obsidian span.cm-formatting-highlight, 
-.cm-s-obsidian span.cm-highlight  { --text-highlight-bg: #a5756233; }
+.cm-s-obsidian span.cm-formatting-highlight,
+.cm-s-obsidian span.cm-highlight {
+	--text-highlight-bg: #a5756233;
+}
 
 .theme-dark .markdown-preview-view mark,
 .markdown-preview-view mark,
-:is(.markdown-preview-view, .markdown-rendered) mark, 
-.cm-s-obsidian span.cm-highlight { 
-	background: #a5756233; 
+:is(.markdown-preview-view, .markdown-rendered) mark,
+.cm-s-obsidian span.cm-highlight {
+	background: #a5756233;
 	color: var(--text-normal);
 }
 
 /* remove border radius from normal highlight */
 .highlightr-rounded span.cm-highlight:not(.hltr-aa) {
-    border-radius: 0px !important;
+	border-radius: 0px !important;
 }
 
 /* instead of background, change text color for defined highlights */
@@ -391,49 +361,61 @@ mark.hltr-r,
 mark.hltr-g,
 mark.hltr-b,
 mark.hltr-p,
-mark.hltr-o
-{
-    background: transparent !important;
-    background-color: transparent !important;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+mark.hltr-o {
+	background: transparent !important;
+	background-color: transparent !important;
+	padding-left: 0px !important;
+	padding-right: 0px !important;
 }
 /* taken from nord pallete colors */
-mark.hltr-r { color: #bf616a !important }
-mark.hltr-g { color: #a3be8c !important }
-mark.hltr-b { color: #81a1c1 !important }
-mark.hltr-p { color: #b48ead !important }
-mark.hltr-o { color: #d08770 !important }
-mark.hltr-aa { color: var(--text-normal) }
+mark.hltr-r {
+	color: #bf616a !important
+}
+mark.hltr-g {
+	color: #a3be8c !important
+}
+mark.hltr-b {
+	color: #81a1c1 !important
+}
+mark.hltr-p {
+	color: #b48ead !important
+}
+mark.hltr-o {
+	color: #d08770 !important
+}
+mark.hltr-aa {
+	color: var(--text-normal)
+}
 
 /* highlightr compact menu */
-.menu.highlighterContainer {
-    display: flex !important;
-    width: max-content !important;
-    padding: .2rem .5rem !important;
-    overflow-x: none !important;
+.menu.painter-plugin-menu-container {
+	display: flex !important;
+	width: max-content !important;
+	padding: .2rem .5rem !important;
+	overflow-x: none !important;
 }
-.menu.highlighterContainer .menu-item {
-   padding: 0;
-   margin: 0;
-   border-bottom: transparent;
-   border-radius: 5px;
-   
-   justify-content: center;
-   align-items: center;
+.menu.painter-plugin-menu-container .menu-item {
+	padding: 0;
+	margin: 0;
+	border-bottom: transparent;
+	border-radius: 5px;
 
-   aspect-ratio: 1/1;
+	justify-content: center;
+	align-items: center;
+
+	aspect-ratio: 1/1;
 
 }
-.menu.highlighterContainer .menu-item .menu-item-title {
+.menu.painter-plugin-menu-container .menu-item .menu-item-title {
 	display: none;
 }
-.menu.highlighterContainer .menu-item .menu-item-icon {
+.menu.painter-plugin-menu-container .menu-item .menu-item-icon {
 	height: min-content;
 	width: min-content;
 }
 
 /* consistent icon stroke width with others */
-.eraser svg path, .paintbrush-2 svg path {
-    stroke-width: .3px !important;
+.eraser svg path,
+.paintbrush-2 svg path {
+	stroke-width: .3px !important;
 }
