--- a/styles.css
+++ b/styles.css
@@ -267,6 +267,10 @@ button.painter-plugin-settings-button svg {
 	padding: 0; margin: 0;
 	border-radius: 0;
 }
+.painter-plugin-color-preview2 {
+	width: 100%;
+	height: 100%;
+}
 
 /* i bet these can be simplified... */
 .modal.mod-settings button:not(.mod-cta):not(.mod-warning).painter-plugin-settings-button.painter-plugin-settings-button-add,
