--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 }
 
 /*highlighter style*/
+
 /* none */
 .highlightr-none mark:not(.style-demo),
 .highlightr-none > mark.style-demo,
@@ -30,12 +31,13 @@
 .highlightr-lowlight > mark.style-demo,
 .highlightr-lowlight span.cm-highlight,
 .highlightr-lowlight .markdown-preview-view mark {
+	color: var(--text-normal, inherit);
 	background-color: var(--hltr-color);
 	--lowlight-background: var(--background-primary);
 	border-radius: 0;
 	background-image: linear-gradient(360deg,
 			rgba(255, 255, 255, 0) 40%,
-			var(--lowlight-background) 40%) !important;
+			var(--lowlight-background) 30%) !important;
 }
 
 .highlightr-lowlight .workspace-split.mod-left-split mark,
@@ -58,6 +60,7 @@
 .highlightr-floating > mark.style-demo,
 .highlightr-floating span.cm-highlight,
 .highlightr-floating .markdown-preview-view mark {
+	color: var(--text-normal, inherit);
 	background-color: var(--hltr-color);
 	--floating-background: var(--background-primary);
 	border-radius: 0;
@@ -86,6 +89,7 @@
 .highlightr-rounded mark:not(.style-demo),
 .highlightr-rounded > mark.style-demo,
 .highlightr-rounded .markdown-preview-view mark {
+	color: var(--text-normal, inherit);
 	background-color: var(--hltr-color);
 	margin: 0 -0.05em;
 	padding: 0.125em 0.15em;
@@ -115,6 +119,7 @@
 .highlightr-realistic mark:not(.style-demo),
 .highlightr-realistic > mark.style-demo,
 .highlightr-realistic .markdown-preview-view mark {
+	color: var(--text-normal, inherit);
 	background-color: var(--hltr-color);
 	margin: 0 -0.05em;
 	padding: 0.1em 0.4em;
@@ -319,11 +324,11 @@ button.painter-plugin-settings-button svg {
 	font-size: .925em; margin-top: 12px;
 	display: flex;
 	column-gap: 1rem;
-	color: var(--text-normal, inherit);
+	/* color: var(--text-normal, inherit); */
 }
-.painter-plugin-style-demo mark {
+/* .painter-plugin-style-demo mark {
 	color: inherit;
-}
+} */
   
 
 /* i bet these can be simplified... */
@@ -438,6 +443,6 @@ button:not(.mod-cta):not(.mod-warning).painter-plugin-settings-button.painter-pl
 
 /* consistent icon stroke width with others */
 .eraser svg path,
-.paintbrush-2 svg path {
+.painter-icon svg path {
 	stroke-width: .3px !important;
 }
