--- a/styles.css
+++ b/styles.css
@@ -320,15 +320,24 @@ button:not(.mod-cta):not(.mod-warning).painter-plugin-settings-button:is(
 .painter-plugin-item-color {
 	display: grid;
 	grid-gap: 8px;
-	grid-template-columns: min-content 7fr;
+	grid-template-columns: min-content min-content 1fr;
 	column-gap: 1rem;
 	align-items: center;
 	border-top: 1px solid var(--background-modifier-border);
 }
 
-.HighlightrSettingsTabsContainer {
+#painter-plugin-sortable-group {
 	border-bottom: 1px solid var(--background-modifier-border);
 }
+.painter-plugin-setting-handle {
+	display: block;
+	background-color: inherit;
+	cursor: grab;
+}
+.painter-plugin-setting-handle > * {
+	pointer-events: none;
+}
+.painter-plugin-ghost { opacity: 0 }
 
 .painter-plugin-color-setting-item {
 	padding: 0.4rem 0;
